--- a/index.html
+++ b/index.html
@@ -462,15 +462,14 @@
 
     // 1. CONFIGURAÇÃO E INICIALIZAÇÃO DO FIREBASE
 const firebaseConfig = {
-  apiKey: "AIzaSyAtASw8oUnlpwGyGZYTvQxNxai2FFbmSBA",
-  authDomain: "saas-bling-f778b.firebaseapp.com",
-  projectId: "saas-bling-f778b",
-  storageBucket: "saas-bling-f778b.firebasestorage.app",
-  messagingSenderId: "895244837624",
-  appId: "1:895244837624:web:9b0c7b0d829796fe56d10d",
-  measurementId: "G-Z1JFP2P7XB"
+  apiKey: "AIzaSyCViQQ59zW1qpgUnkxc_uGdoq8q-iJFD1o",
+  authDomain: "enviazap-482917.firebaseapp.com",
+  projectId: "enviazap-482917",
+  storageBucket: "enviazap-482917.firebasestorage.app",
+  messagingSenderId: "178214147202",
+  appId: "1:178214147202:web:dee7a3a08b8232fa4a509b",
+  measurementId: "G-JYCTCVD68J"
 };
-
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
 
